Implementation of input field validations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,10 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "no-console":"off",
+    "@typescript-eslint/no-empty-function": "off",
+    "no-unused-expressions": "off",
+    "@typescript-eslint/ban-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
