--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,13 +33,20 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
-    "no-console":"off",
+    "no-console": "off",
     "@typescript-eslint/no-empty-function": "off",
     "no-unused-expressions": "off",
     "@typescript-eslint/ban-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".tsx"
+        ]
+      }
+    ],
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
     "prettier/prettier": "error",
